# crypto_trading_heatmap

./: .env  Dockerfile.flink  Dockerfile.postgres  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  start.sh  test_code.ipynb  test_data.ipynb
airflow/: Dockerfile  requirements.txt
airflow/dags/: pipeline.py
flink/: Dockerfile.flink  pyproject.flink.toml  requirements.txt
flink/src/: start_jobs.sh
flink/src/job/: ob_aggregate_tumbling_window.py  trade_aggregate_tumbling_window.py
init-db/: init_postgres.sql
producer/: Dockerfile.producer  __init__.py  ob.py  produce_data.py  requirements.producer.txt  trade.py
producer/modules/: __init__.py  ob.py  trade.py
producer/utils/: __init__.py  kafka_producer.py  retry.py
src/: init_postgres.sql
src/job/: ob_aggregate_tumbling_window.py  trade_aggregate_tumbling_window.py
