[project]
name = "airflowdockerapiproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.46",
    "einops==0.8.1",
    "huggingface-hub==0.33.1",
    "ipykernel>=7.2.0",
    "kafka-python>=2.3.0",
    "matplotlib==3.9.3",
    "numpy>=2.4.4",
    "pandas==2.2.2",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "safetensors==0.6.2",
    "sqlalchemy>=2.0.49",
    "torch>=2.0.0",
    "tqdm==4.67.1",
    "websockets>=16.0",
]
